configfile format changed

--- a/source/configfile.ini
+++ b/source/configfile.ini
@@ -1,16 +1,10 @@
-[default]
-#main_directory: C:\Users\TorabinejadM\Desktop\Thesis\implementation\normalization-git\source
-main_directory: /mnt/c/Users/TorabinejadM/Desktop/Thesis/implementation/sdm-tib-github/rml-normalizer/source
-
 [datasets]
+number_of_tuples: 8000000 tuples
 number_of_datasets: 1
-#output_folder: ${default:main_directory}\output
-output_folder: ${default:main_directory}/output
+type: Normalized
 
 [dataset1]
-name: unnormal
-format: csv
-#mapping: ${default:main_directory}\mappings\unnormal-rml-map.ttl
-#closure: ${default:main_directory}\closures\employee.ttl
-mapping: ${default:main_directory}/mappings/tree.ttl
-closure: ${default:main_directory}/closures/tree.ttl
+name: 1% distinct values, 3 joins, 5 attributes, Using current key
+mapping: ./app/source/mappings/8M_1_3_5_y.ttl
+closure: ./app/source/closures/8M_1_3_5_y.ttl
+type: before
