cleaning up and reorganising + README file added + input files for experiments added

--- a/app/experiments/configfile.ini
+++ b/app/experiments/configfile.ini
@@ -1,30 +1,19 @@
 [rules]
-number_of_tuples = 100K tuples
-plot_name = 100K
-number_of_datasets = 1
 number_of_rules = 2
 
 [rule1]
-name = 1% distinct values, 3 joins, 5 attributes, Not using current key (attr C)
-filename = mapping--data_normal.ttl
-dataset_name = mapping--data-PT_C_E.csv,mapping--data-PT_C_D.csv,mapping--data-CT_B.csv
-type = before
+filename = 3nf_1join--4M_100K--4M_100K_normal.ttl
+dataset_name = 3nf_1join--4M_100K--4M_100K-PT_B_C.csv,3nf_1join--4M_100K--4M_100K-CT_A.csv
 
 [rule2]
-name = 1% distinct values, 3 joins, 5 attributes, Not using current key (attr C)
-filename = mapping--data.ttl
-dataset_name = mapping--data.csv
-type = after
+filename = 3nf_1join--4M_100K--4M_100K.ttl
+dataset_name = 3nf_1join--4M_100K--4M_100K.csv
 
 [rule3]
-name = 1% distinct values, 3 joins, 5 attributes, Using current key
 filename = 100K_1_3_5_y.ttl
 dataset_name = 100K.csv
-type = before
 
 [rule4]
-name = 1% distinct values, 3 joins, 5 attributes, Using current key
 filename = 100K_1_3_5_y_normal.ttl
 dataset_name = 100K-AE.csv,100-EH.csv,100K-EI.csv,100K-EJ.csv
-type = after
 
