--- a/app/source/configfile.ini
+++ b/app/source/configfile.ini
@@ -1,12 +1,8 @@
-[datasets]
-number_of_tuples = 1M tuples
+[default]
 number_of_rules = 1
-number_of_datasets = data.csv
-type = Normalized
-
-[dataset1]
-name = 1% distinct values, 3 joins, 5 attributes, Using current key
-mapping = ./app/source/mappings/mapping.ttl
+name_of_datasets = data.csv
 fd = ./app/source/fd/fd.ttl
-type = before
+
+[rule1]
+mapping = ./app/source/mappings/mapping.ttl
 
